docs: add new docs

--- a/packages/manual/src/css/custom.css
+++ b/packages/manual/src/css/custom.css
@@ -41,3 +41,37 @@ a > svg {
   display: inline-flex;
   align-items: center;
 }
+
+main > .container > .row {
+  height: 100%;
+}
+
+main > .container > .row > .col > div {
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+  height: 100%;
+}
+
+main > .container > .row > .col > div > article {
+  flex: 1 1 auto;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main > .container > .row > .col > div > article > nav {
+  flex: 0 0 auto;
+}
+
+main > .container > .row > .col > div > article > .theme-doc-markdown.markdown {
+  flex: 1 1 auto;
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main > .container > .row > .col > div > nav {
+  flex: 0 0 auto;
+  min-height: 0;
+}
