--- a/packages/manual/src/css/custom.css
+++ b/packages/manual/src/css/custom.css
@@ -10,26 +10,27 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #2563EB;
+  --ifm-color-primary-dark: #1E3A8A;
+  --ifm-color-primary-darker: #1E40AF;
+  --ifm-color-primary-darkest: #1E40AF;
+  --ifm-color-primary-light: #1D4ED8;
+  --ifm-color-primary-lighter: #2563EB;
+  --ifm-color-primary-lightest: #3B82F6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #2563EB;
+  --ifm-color-primary-dark: #1E3A8A;
+  --ifm-color-primary-darker: #1E40AF;
+  --ifm-color-primary-darkest: #1E40AF;
+  --ifm-color-primary-light: #1D4ED8;
+  --ifm-color-primary-lighter: #2563EB;
+  --ifm-color-primary-lightest: #3B82F6;
+  --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -74,4 +75,12 @@ main > .container > .row > .col > div > article > .theme-doc-markdown.markdown {
 main > .container > .row > .col > div > nav {
   flex: 0 0 auto;
   min-height: 0;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.prose > article > header > h2 > a:not(:hover) {
+  color: unset;
 }
