--- a/packages/manual/src/css/custom.css
+++ b/packages/manual/src/css/custom.css
@@ -10,32 +10,32 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2563EB;
-  --ifm-color-primary-dark: #1E3A8A;
-  --ifm-color-primary-darker: #1E40AF;
-  --ifm-color-primary-darkest: #1E40AF;
-  --ifm-color-primary-light: #1D4ED8;
-  --ifm-color-primary-lighter: #2563EB;
-  --ifm-color-primary-lightest: #3B82F6;
+  --ifm-color-primary: #2563eb;
+  --ifm-color-primary-dark: #1e3a8a;
+  --ifm-color-primary-darker: #1e40af;
+  --ifm-color-primary-darkest: #1e40af;
+  --ifm-color-primary-light: #1d4ed8;
+  --ifm-color-primary-lighter: #2563eb;
+  --ifm-color-primary-lightest: #3b82f6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #2563EB;
-  --ifm-color-primary-dark: #1E3A8A;
-  --ifm-color-primary-darker: #1E40AF;
-  --ifm-color-primary-darkest: #1E40AF;
-  --ifm-color-primary-light: #1D4ED8;
-  --ifm-color-primary-lighter: #2563EB;
-  --ifm-color-primary-lightest: #3B82F6;
+[data-theme="dark"] {
+  --ifm-color-primary: #2563eb;
+  --ifm-color-primary-dark: #1e3a8a;
+  --ifm-color-primary-darker: #1e40af;
+  --ifm-color-primary-darkest: #1e40af;
+  --ifm-color-primary-light: #1d4ed8;
+  --ifm-color-primary-lighter: #2563eb;
+  --ifm-color-primary-lightest: #3b82f6;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 a > svg {
- display: inline-block;
+  display: inline-block;
 }
 
 .navbar__items.navbar__items--right a {
@@ -83,4 +83,17 @@ a {
 
 .prose > article > header > h2 > a:not(:hover) {
   color: unset;
+}
+
+button.navbar__toggle.clean-btn {
+  margin-right: 0;
+}
+
+.navbar__logo {
+  margin-right: 0;
+  height: 44px;
+}
+
+.navbar-sidebar__brand {
+  padding-left: 0;
 }
