--- a/packages/site/src/blog/main.css
+++ b/packages/site/src/blog/main.css
@@ -14,6 +14,12 @@ body {
 
 #blog {
   overflow: auto;
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none;
+}
+
+#blog::-webkit-scrollbar {
+  display: none;
 }
 
 .noto-serif {
