--- a/packages/stylebase/style.css
+++ b/packages/stylebase/style.css
@@ -1,1 +1,154 @@
-@import "tailwindcss";
+@plugin "@tailwindcss/typography";
+
+@theme {
+    --spacing: 0.125rem;
+    --spacing-1: 0.125rem;
+    --spacing-4: 0.25rem;
+    --spacing-8: 0.5rem;
+    --spacing-16: 1rem;
+    --spacing-18: 1.2rem;
+    --spacing-32: 2rem;
+    --spacing-64: 4rem;
+    --spacing-128: 8rem;
+    --spacing-256: 16rem;
+}
+
+@utility no-scrollbar {
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
+@utility blur-cover {
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(7px);
+}
+
+@utility gradient-blur-cover {
+    backdrop-filter: blur(7px);
+    background-image: linear-gradient(#ffffff, #ffffff80);
+}
+
+@utility lqip-blur {
+    backdrop-filter: blur(20px);
+}
+
+@utility text-blur {
+    backdropfilter: blur(7px);
+}
+
+@layer base {
+    a:focus {
+        outline: none;
+        text-decoration: none;
+    }
+
+    h1 {
+        font-size: 2.25rem;
+    }
+    h2 {
+        font-size: 1.5rem;
+    }
+    h3 {
+        font-size: 1.25rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+    h5 {
+        font-size: 1rem;
+    }
+}
+
+@layer components {
+    .hljs {
+        color: "#24292e";
+        background: "#ffffff";
+    }
+    .prose pre {
+        color: #24292f !important;
+        background-color: #f6f8fa !important;
+    }
+
+    .hljs-emphasis {
+        font-style: italic;
+    }
+    .hljs-strong {
+        font-weight: bold;
+    }
+    .hljs-doctag,
+    .hljs-keyword,
+    .hljs-meta .hljs-keyword,
+    .hljs-template-tag,
+    .hljs-template-variable,
+    .hljs-type,
+    .hljs-variable.language_,
+    .hljs-deletion {
+        color: "#d73a49";
+    }
+
+    .hljs-title,
+    .hljs-title.class_,
+    .hljs-title.class_.inherited__,
+    .hljs-title.function_ {
+        color: "#6f42c1";
+    }
+
+    .hljs-attr,
+    .hljs-attribute,
+    .hljs-literal,
+    .hljs-meta,
+    .hljs-number,
+    .hljs-operator,
+    .hljs-variable,
+    .hljs-selector-attr,
+    .hljs-selector-class,
+    .hljs-section,
+    .hljs-selector-id {
+        color: "#005cc5";
+    }
+    .hljs-bullet {
+        color: "#735c0f";
+    }
+
+    .hljs-regexp,
+    .hljs-string,
+    .hljs-meta .hljs-string {
+        color: "#032f62";
+    }
+    .hljs-built_in,
+    .hljs-symbol {
+        color: "#e36209";
+    }
+    .hljs-comment,
+    .hljs-code,
+    .hljs-formula {
+        color: "#6a737d";
+    }
+
+    .hljs-name,
+    .hljs-quote,
+    .hljs-selector-tag,
+    .hljs-selector-pseudo,
+    .hljs-addition {
+        color: "#22863a";
+    }
+
+    .hljs-deletion,
+    .hljs-addition,
+    .hljs-deletion {
+        background-color: "#ffeef0";
+    }
+
+    .hljs-subst,
+    .hljs-emphasis,
+    .hljs-strong {
+        color: "#24292e";
+    }
+
+    .hljs-section {
+        font-weight: bold;
+    }
+}
