--- a/packages/stylebase/style.css
+++ b/packages/stylebase/style.css
@@ -91,7 +91,7 @@
 }
 
 @utility text-blur {
-    backdropfilter: blur(7px);
+    backdrop-filter: blur(7px);
 }
 
 @utility shadow-empty {
@@ -137,7 +137,7 @@
 
     a {
         color: rgb(37, 99, 235);
-        text-decoration: "none";
+        text-decoration: none;
         padding: 4px;
         border-radius: 0.25rem;
         word-break: break-all;
