--- a/packages/site/src/blog/main.css
+++ b/packages/site/src/blog/main.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
 @import "@bbki.ng/stylebase";
-
-@config '../../tailwind.config.cjs';
+@source "../../node_modules/@bbki.ng/components/";
 
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
