feat: add crows logo

--- a/packages/stylebase/style.css
+++ b/packages/stylebase/style.css
@@ -54,6 +54,10 @@
     --color-red-500: #ef4444;
     --color-red-600: #dc2626;
 
+    --color-yy-pink-50: #fdf4f4;
+    --color-yy-pink-100: #fbd1d2;
+    --color-yy-pink-150: #f8babc;
+
     --tw-prose-body: "#000";
 
     --font-sans:
